<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>com.finn</groupId>
        <artifactId>oh-boot</artifactId>
        <version>3.0.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>oh-support</artifactId>
    <description>基础组织部门信息，包括人员、角色、部门、生成token等，业务模块中可按需引入</description>
    <!-- 框架版本 -->
    <version>1.0.1.20250417</version>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.finn</groupId>
            <artifactId>oh-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.finn</groupId>
            <artifactId>oh-framework</artifactId>
        </dependency>
    </dependencies>
</project>
